[gd_scene load_steps=8 format=3 uid="uid://dphwqb1yvpww8"]

[ext_resource type="Texture2D" uid="uid://krl45pu0tsys" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/Terrain/Ground/Tilemap_Flat.png" id="1_pkr4f"]
[ext_resource type="Script" path="res://alpha 1.0/battle a1.0.gd" id="1_qya3q"]
[ext_resource type="Texture2D" uid="uid://rtfl0jdsrbft" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Banners/Carved_9Slides.png" id="3_q7x07"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_csio6"]
texture = ExtResource("1_pkr4f")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
18:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0

[sub_resource type="TileSet" id="TileSet_pjue4"]
sources/0 = SubResource("TileSetAtlasSource_csio6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cqfe2"]
texture = ExtResource("3_q7x07")
4:3/0 = 0
5:3/0 = 0
5:4/0 = 0
4:4/0 = 0
3:4/0 = 0
3:3/0 = 0
2:2/0 = 0
3:2/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:2/0 = 0
2:4/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
0:2/0 = 0
1:2/0 = 0
1:1/0 = 0
2:1/0 = 0
4:2/0 = 0
0:1/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
10:1/0 = 0
11:1/0 = 0
11:2/0 = 0
10:2/0 = 0
9:2/0 = 0
9:1/0 = 0
8:1/0 = 0
11:0/0 = 0
7:1/0 = 0
6:1/0 = 0
11:3/0 = 0
10:3/0 = 0
9:3/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
8:4/0 = 0
7:4/0 = 0
6:4/0 = 0
1:4/0 = 0
0:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
11:5/0 = 0
10:5/0 = 0
9:5/0 = 0
8:5/0 = 0
7:5/0 = 0
6:5/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
2:5/0 = 0
1:5/0 = 0
0:5/0 = 0
11:6/0 = 0
10:6/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
0:6/0 = 0
11:7/0 = 0
10:7/0 = 0
9:7/0 = 0
8:7/0 = 0
7:7/0 = 0
6:7/0 = 0
5:7/0 = 0
11:8/0 = 0
10:8/0 = 0
9:8/0 = 0
8:8/0 = 0
7:8/0 = 0
6:8/0 = 0
5:8/0 = 0
4:8/0 = 0
3:8/0 = 0
2:8/0 = 0
1:7/0 = 0
0:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
11:9/0 = 0
10:9/0 = 0
9:9/0 = 0
8:9/0 = 0
7:9/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
3:9/0 = 0
2:9/0 = 0
1:9/0 = 0
0:8/0 = 0
11:10/0 = 0
10:10/0 = 0
9:10/0 = 0
8:10/0 = 0
7:10/0 = 0
6:10/0 = 0
5:10/0 = 0
4:10/0 = 0
3:10/0 = 0
2:10/0 = 0
1:10/0 = 0
0:9/0 = 0
0:10/0 = 0
1:8/0 = 0
11:11/0 = 0
10:11/0 = 0
9:11/0 = 0
8:11/0 = 0
7:11/0 = 0
6:11/0 = 0
5:11/0 = 0
4:11/0 = 0
3:11/0 = 0
2:11/0 = 0
1:11/0 = 0
0:11/0 = 0

[sub_resource type="TileSet" id="TileSet_v781s"]
sources/0 = SubResource("TileSetAtlasSource_cqfe2")

[node name="Battle" type="Node2D"]
script = ExtResource("1_qya3q")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(400, -2)
tile_set = SubResource("TileSet_pjue4")
format = 2
layer_0/tile_data = PackedInt32Array(2228240, 262144, 13, 2293776, 262144, 14, 2359312, 262144, 15, 2228241, 327680, 13, 2293777, 327680, 14, 2359313, 327680, 15, 2228242, 393216, 13, 2293778, 393216, 14, 2359314, 393216, 15, 2228243, 458752, 13, 2293779, 458752, 14, 2359315, 458752, 15, 2228244, 196608, 13, 2293780, 196608, 14, 2359316, 196608, 15, 2228245, 262144, 13, 2293781, 262144, 14, 2359317, 262144, 15, 2228246, 327680, 13, 2293782, 327680, 14, 2359318, 327680, 15, 2228247, 393216, 13, 2293783, 393216, 14, 2359319, 393216, 15, 2228248, 458752, 13, 2293784, 458752, 14, 2359320, 458752, 15, 2228249, 196608, 13, 2293785, 196608, 14, 2359321, 196608, 15, 2228250, 262144, 13, 2293786, 262144, 14, 2359322, 262144, 15, 2228251, 327680, 13, 2293787, 327680, 14, 2359323, 327680, 15, 2228252, 393216, 13, 2293788, 393216, 14, 2359324, 393216, 15, 2228253, 458752, 13, 2293789, 458752, 14, 2359325, 458752, 15, 2228254, 196608, 13, 2293790, 196608, 14, 2359326, 196608, 15, 2228255, 262144, 13, 2293791, 262144, 14, 2359327, 262144, 15, 2228256, 327680, 13, 2293792, 327680, 14, 2359328, 327680, 15, 2228257, 393216, 13, 2293793, 393216, 14, 2359329, 393216, 15, 2228258, 458752, 13, 2293794, 458752, 14, 2359330, 458752, 15, 2228259, 1507328, 13, 2293795, 1507328, 14, 2359331, 1507328, 15, 2228260, 1572864, 13, 2293796, 1572864, 14, 2359332, 1572864, 15, 2228261, 1638400, 13, 2293797, 1638400, 14, 2359333, 1638400, 15, 2228262, 1703936, 13, 2293798, 1703936, 14, 2359334, 1703936, 15, 2228263, 1769472, 13, 2293799, 1769472, 14, 2359335, 1769472, 15, 2228264, 1835008, 13, 2293800, 1835008, 14, 2359336, 1835008, 15, 2228265, 1507328, 13, 2293801, 1507328, 14, 2359337, 1507328, 15, 2228266, 1572864, 13, 2293802, 1572864, 14, 2359338, 1572864, 15, 2228267, 1638400, 13, 2293803, 1638400, 14, 2359339, 1638400, 15, 2228268, 1703936, 13, 2293804, 1703936, 14, 2359340, 1703936, 15, 2228269, 1769472, 13, 2293805, 1769472, 14, 2359341, 1769472, 15, 2228270, 1835008, 13, 2293806, 1835008, 14, 2359342, 1835008, 15, 2228271, 1507328, 13, 2293807, 1507328, 14, 2359343, 1507328, 15, 2228272, 1572864, 13, 2293808, 1572864, 14, 2359344, 1572864, 15, 2228273, 1638400, 13, 2293809, 1638400, 14, 2359345, 1638400, 15, 2228274, 1703936, 13, 2293810, 1703936, 14, 2359346, 1703936, 15, 2228275, 1769472, 13, 2293811, 1769472, 14, 2359347, 1769472, 15, 2228276, 1835008, 13, 2293812, 1835008, 14, 2359348, 1835008, 15, 2228277, 1507328, 13, 2293813, 1507328, 14, 2359349, 1507328, 15, 2228278, 1572864, 13, 2293814, 1572864, 14, 2359350, 1572864, 15, 2228279, 1638400, 13, 2293815, 1638400, 14, 2359351, 1638400, 15, 2228280, 1703936, 13, 2293816, 1703936, 14, 2359352, 1703936, 15, 2228281, 1769472, 13, 2293817, 1769472, 14, 2359353, 1769472, 15, 2228282, 1835008, 13, 2293818, 1835008, 14, 2359354, 1835008, 15, 2228283, 1703936, 13, 2293819, 1703936, 14, 2359355, 1703936, 15, 2228284, 1769472, 13, 2293820, 1769472, 14, 2359356, 1769472, 15, 2228285, 1835008, 13, 2293821, 1835008, 14, 2359357, 1835008, 15, 2228286, 1900544, 13, 2293822, 1900544, 14, 2359358, 1900544, 15, 2228287, 1966080, 13, 2293823, 1966080, 14, 2359359, 1966080, 15, 2228288, 2031616, 13, 2293824, 2031616, 14, 2359360, 2031616, 15, 2162694, 0, 12, 2228230, 0, 13, 2293766, 0, 14, 2359302, 0, 15, 2162695, 65536, 12, 2228231, 65536, 13, 2293767, 65536, 14, 2359303, 65536, 15, 2162696, 131072, 12, 2228232, 131072, 13, 2293768, 131072, 14, 2359304, 131072, 15, 2162697, 196608, 12, 2228233, 196608, 13, 2293769, 196608, 14, 2359305, 196608, 15, 2162698, 262144, 12, 2228234, 262144, 13, 2293770, 262144, 14, 2359306, 262144, 15, 2162699, 327680, 12, 2228235, 327680, 13, 2293771, 327680, 14, 2359307, 327680, 15, 2162700, 393216, 12, 2228236, 393216, 13, 2293772, 393216, 14, 2359308, 393216, 15, 2162701, 458752, 12, 2228237, 458752, 13, 2293773, 458752, 14, 2359309, 458752, 15, 2162702, 524288, 12, 2228238, 524288, 13, 2293774, 524288, 14, 2359310, 524288, 15, 2162703, 196608, 12, 2228239, 196608, 13, 2293775, 196608, 14, 2359311, 196608, 15, 2162704, 262144, 12, 2162705, 327680, 12, 2162706, 393216, 12, 2162707, 458752, 12, 2162708, 196608, 12, 2162709, 262144, 12, 2162710, 327680, 12, 2162711, 393216, 12, 2162712, 458752, 12, 2162713, 196608, 12, 2162714, 262144, 12, 2162715, 327680, 12, 2162716, 393216, 12, 2162717, 458752, 12, 2162718, 196608, 12, 2162719, 262144, 12, 2162720, 327680, 12, 2162721, 393216, 12, 2162722, 458752, 12, 2162723, 1507328, 12, 2162724, 1572864, 12, 2162725, 1638400, 12, 2162726, 1703936, 12, 2162727, 1769472, 12, 2162728, 1835008, 12, 2162729, 1507328, 12, 2162730, 1572864, 12, 2162731, 1638400, 12, 2162732, 1703936, 12, 2162733, 1769472, 12, 2162734, 1835008, 12, 2162735, 1507328, 12, 2162736, 1572864, 12, 2162737, 1638400, 12, 2162738, 1703936, 12, 2162739, 1769472, 12, 2162740, 1835008, 12, 2162741, 1507328, 12, 2162742, 1572864, 12, 2162743, 1638400, 12, 2162744, 1703936, 12, 2162745, 1769472, 12, 2162746, 1835008, 12, 2162747, 1703936, 12, 2162748, 1769472, 12, 2162749, 1835008, 12, 2162750, 1900544, 12, 2162751, 1966080, 12, 2162752, 2031616, 12)

[node name="BattleCenterPosition" type="Node2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(-1290.11, -660.798)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="SelectedCharacterStats" type="CanvasGroup" parent="."]

[node name="TileMap" type="TileMap" parent="SelectedCharacterStats"]
tile_set = SubResource("TileSet_v781s")
format = 2
layer_0/tile_data = PackedInt32Array(2555935, 0, 0, 2621471, 0, 1, 2687007, 0, 2, 2752543, 0, 3, 2818079, 0, 4, 2883615, 0, 5, 2949151, 0, 6, 3014687, 0, 7, 3080223, 0, 8, 3145759, 0, 9, 3211295, 0, 10, 3276831, 0, 11, 2555936, 65536, 0, 2621472, 65536, 1, 2687008, 65536, 2, 2752544, 65536, 3, 2818080, 65536, 4, 2883616, 65536, 5, 2949152, 65536, 6, 3014688, 65536, 7, 3080224, 65536, 8, 3145760, 65536, 9, 3211296, 65536, 10, 3276832, 65536, 11, 2555937, 131072, 0, 2621473, 131072, 1, 2687009, 131072, 2, 2752545, 131072, 3, 2818081, 131072, 4, 2883617, 131072, 5, 2949153, 131072, 6, 3014689, 131072, 7, 3080225, 131072, 8, 3145761, 131072, 9, 3211297, 131072, 10, 3276833, 131072, 11, 2555938, 196608, 0, 2621474, 196608, 1, 2687010, 196608, 2, 2752546, 196608, 3, 2818082, 196608, 4, 2883618, 196608, 5, 2949154, 196608, 6, 3014690, 196608, 7, 3080226, 196608, 8, 3145762, 196608, 9, 3211298, 196608, 10, 3276834, 196608, 11, 2555939, 262144, 0, 2621475, 262144, 1, 2687011, 262144, 2, 2752547, 262144, 3, 2818083, 262144, 4, 2883619, 262144, 5, 2949155, 262144, 6, 3014691, 262144, 7, 3080227, 262144, 8, 3145763, 262144, 9, 3211299, 262144, 10, 3276835, 262144, 11, 2555940, 327680, 0, 2621476, 327680, 1, 2687012, 327680, 2, 2752548, 327680, 3, 2818084, 327680, 4, 2883620, 327680, 5, 2949156, 327680, 6, 3014692, 327680, 7, 3080228, 327680, 8, 3145764, 327680, 9, 3211300, 327680, 10, 3276836, 327680, 11, 2555941, 393216, 0, 2621477, 393216, 1, 2687013, 393216, 2, 2752549, 393216, 3, 2818085, 393216, 4, 2883621, 393216, 5, 2949157, 393216, 6, 3014693, 393216, 7, 3080229, 393216, 8, 3145765, 393216, 9, 3211301, 393216, 10, 3276837, 393216, 11, 2555942, 458752, 0, 2621478, 458752, 1, 2687014, 458752, 2, 2752550, 458752, 3, 2818086, 458752, 4, 2883622, 458752, 5, 2949158, 458752, 6, 3014694, 458752, 7, 3080230, 458752, 8, 3145766, 458752, 9, 3211302, 458752, 10, 3276838, 458752, 11, 2555943, 524288, 0, 2621479, 524288, 1, 2687015, 524288, 2, 2752551, 524288, 3, 2818087, 524288, 4, 2883623, 524288, 5, 2949159, 524288, 6, 3014695, 524288, 7, 3080231, 524288, 8, 3145767, 524288, 9, 3211303, 524288, 10, 3276839, 524288, 11, 2555944, 589824, 0, 2621480, 589824, 1, 2687016, 589824, 2, 2752552, 589824, 3, 2818088, 589824, 4, 2883624, 589824, 5, 2949160, 589824, 6, 3014696, 589824, 7, 3080232, 589824, 8, 3145768, 589824, 9, 3211304, 589824, 10, 3276840, 589824, 11, 2555945, 655360, 0, 2621481, 655360, 1, 2687017, 655360, 2, 2752553, 655360, 3, 2818089, 655360, 4, 2883625, 655360, 5, 2949161, 655360, 6, 3014697, 655360, 7, 3080233, 655360, 8, 3145769, 655360, 9, 3211305, 655360, 10, 3276841, 655360, 11, 2555946, 720896, 0, 2621482, 720896, 1, 2687018, 720896, 2, 2752554, 720896, 3, 2818090, 720896, 4, 2883626, 720896, 5, 2949162, 720896, 6, 3014698, 720896, 7, 3080234, 720896, 8, 3145770, 720896, 9, 3211306, 720896, 10, 3276842, 720896, 11)

[node name="HPLabel" type="Label" parent="SelectedCharacterStats"]
offset_left = 516.0
offset_top = 639.0
offset_right = 549.0
offset_bottom = 664.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "HP:"

[node name="HpValue" type="Label" parent="SelectedCharacterStats"]
offset_left = 562.0
offset_top = 639.0
offset_right = 676.0
offset_bottom = 665.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="DefLabel" type="Label" parent="SelectedCharacterStats"]
offset_left = 516.0
offset_top = 660.0
offset_right = 554.0
offset_bottom = 683.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Def:"

[node name="DefValue" type="Label" parent="SelectedCharacterStats"]
offset_left = 562.0
offset_top = 660.0
offset_right = 677.0
offset_bottom = 683.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="MPLabel" type="Label" parent="SelectedCharacterStats"]
offset_left = 516.0
offset_top = 682.0
offset_right = 556.0
offset_bottom = 705.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "MP:"

[node name="MpValue" type="Label" parent="SelectedCharacterStats"]
offset_left = 562.0
offset_top = 681.0
offset_right = 675.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="AGILabel" type="Label" parent="SelectedCharacterStats"]
offset_left = 517.0
offset_top = 704.0
offset_right = 557.0
offset_bottom = 727.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "AGI:"

[node name="AgiValue" type="Label" parent="SelectedCharacterStats"]
offset_left = 562.0
offset_top = 704.0
offset_right = 672.0
offset_bottom = 727.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="ATKLabel" type="Label" parent="SelectedCharacterStats"]
offset_left = 517.0
offset_top = 725.0
offset_right = 557.0
offset_bottom = 748.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ATK:"

[node name="AtkValue" type="Label" parent="SelectedCharacterStats"]
offset_left = 562.0
offset_top = 725.0
offset_right = 675.0
offset_bottom = 748.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="AttackButton" type="Button" parent="."]
offset_left = 918.0
offset_top = 629.0
offset_right = 1003.0
offset_bottom = 677.0
text = "Attack"

[node name="SelectedEnemyStats" type="CanvasGroup" parent="."]
position = Vector2(760, 0)

[node name="TileMap" type="TileMap" parent="SelectedEnemyStats"]
tile_set = SubResource("TileSet_v781s")
format = 2
layer_0/tile_data = PackedInt32Array(2555935, 0, 0, 2621471, 0, 1, 2687007, 0, 2, 2752543, 0, 3, 2818079, 0, 4, 2883615, 0, 5, 2949151, 0, 6, 3014687, 0, 7, 3080223, 0, 8, 3145759, 0, 9, 3211295, 0, 10, 3276831, 0, 11, 2555936, 65536, 0, 2621472, 65536, 1, 2687008, 65536, 2, 2752544, 65536, 3, 2818080, 65536, 4, 2883616, 65536, 5, 2949152, 65536, 6, 3014688, 65536, 7, 3080224, 65536, 8, 3145760, 65536, 9, 3211296, 65536, 10, 3276832, 65536, 11, 2555937, 131072, 0, 2621473, 131072, 1, 2687009, 131072, 2, 2752545, 131072, 3, 2818081, 131072, 4, 2883617, 131072, 5, 2949153, 131072, 6, 3014689, 131072, 7, 3080225, 131072, 8, 3145761, 131072, 9, 3211297, 131072, 10, 3276833, 131072, 11, 2555938, 196608, 0, 2621474, 196608, 1, 2687010, 196608, 2, 2752546, 196608, 3, 2818082, 196608, 4, 2883618, 196608, 5, 2949154, 196608, 6, 3014690, 196608, 7, 3080226, 196608, 8, 3145762, 196608, 9, 3211298, 196608, 10, 3276834, 196608, 11, 2555939, 262144, 0, 2621475, 262144, 1, 2687011, 262144, 2, 2752547, 262144, 3, 2818083, 262144, 4, 2883619, 262144, 5, 2949155, 262144, 6, 3014691, 262144, 7, 3080227, 262144, 8, 3145763, 262144, 9, 3211299, 262144, 10, 3276835, 262144, 11, 2555940, 327680, 0, 2621476, 327680, 1, 2687012, 327680, 2, 2752548, 327680, 3, 2818084, 327680, 4, 2883620, 327680, 5, 2949156, 327680, 6, 3014692, 327680, 7, 3080228, 327680, 8, 3145764, 327680, 9, 3211300, 327680, 10, 3276836, 327680, 11, 2555941, 393216, 0, 2621477, 393216, 1, 2687013, 393216, 2, 2752549, 393216, 3, 2818085, 393216, 4, 2883621, 393216, 5, 2949157, 393216, 6, 3014693, 393216, 7, 3080229, 393216, 8, 3145765, 393216, 9, 3211301, 393216, 10, 3276837, 393216, 11, 2555942, 458752, 0, 2621478, 458752, 1, 2687014, 458752, 2, 2752550, 458752, 3, 2818086, 458752, 4, 2883622, 458752, 5, 2949158, 458752, 6, 3014694, 458752, 7, 3080230, 458752, 8, 3145766, 458752, 9, 3211302, 458752, 10, 3276838, 458752, 11, 2555943, 524288, 0, 2621479, 524288, 1, 2687015, 524288, 2, 2752551, 524288, 3, 2818087, 524288, 4, 2883623, 524288, 5, 2949159, 524288, 6, 3014695, 524288, 7, 3080231, 524288, 8, 3145767, 524288, 9, 3211303, 524288, 10, 3276839, 524288, 11, 2555944, 589824, 0, 2621480, 589824, 1, 2687016, 589824, 2, 2752552, 589824, 3, 2818088, 589824, 4, 2883624, 589824, 5, 2949160, 589824, 6, 3014696, 589824, 7, 3080232, 589824, 8, 3145768, 589824, 9, 3211304, 589824, 10, 3276840, 589824, 11, 2555945, 655360, 0, 2621481, 655360, 1, 2687017, 655360, 2, 2752553, 655360, 3, 2818089, 655360, 4, 2883625, 655360, 5, 2949161, 655360, 6, 3014697, 655360, 7, 3080233, 655360, 8, 3145769, 655360, 9, 3211305, 655360, 10, 3276841, 655360, 11, 2555946, 720896, 0, 2621482, 720896, 1, 2687018, 720896, 2, 2752554, 720896, 3, 2818090, 720896, 4, 2883626, 720896, 5, 2949162, 720896, 6, 3014698, 720896, 7, 3080234, 720896, 8, 3145770, 720896, 9, 3211306, 720896, 10, 3276842, 720896, 11)

[node name="HPLabel" type="Label" parent="SelectedEnemyStats"]
offset_left = 516.0
offset_top = 639.0
offset_right = 549.0
offset_bottom = 664.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "HP:"

[node name="HpValue" type="Label" parent="SelectedEnemyStats"]
offset_left = 562.0
offset_top = 639.0
offset_right = 676.0
offset_bottom = 665.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="DefLabel" type="Label" parent="SelectedEnemyStats"]
offset_left = 516.0
offset_top = 660.0
offset_right = 554.0
offset_bottom = 683.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Def:"

[node name="DefValue" type="Label" parent="SelectedEnemyStats"]
offset_left = 562.0
offset_top = 660.0
offset_right = 677.0
offset_bottom = 683.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="MPLabel" type="Label" parent="SelectedEnemyStats"]
offset_left = 516.0
offset_top = 682.0
offset_right = 556.0
offset_bottom = 705.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "MP:"

[node name="MpValue" type="Label" parent="SelectedEnemyStats"]
offset_left = 562.0
offset_top = 681.0
offset_right = 675.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="AGILabel" type="Label" parent="SelectedEnemyStats"]
offset_left = 517.0
offset_top = 704.0
offset_right = 557.0
offset_bottom = 727.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "AGI:"

[node name="AgiValue" type="Label" parent="SelectedEnemyStats"]
offset_left = 562.0
offset_top = 704.0
offset_right = 672.0
offset_bottom = 727.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[node name="ATKLabel" type="Label" parent="SelectedEnemyStats"]
offset_left = 517.0
offset_top = 725.0
offset_right = 557.0
offset_bottom = 748.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ATK:"

[node name="AtkValue" type="Label" parent="SelectedEnemyStats"]
offset_left = 562.0
offset_top = 725.0
offset_right = 675.0
offset_bottom = 748.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "---"

[connection signal="pressed" from="AttackButton" to="." method="_on_attack_button_pressed"]
